# nlft-qsp

./: .gitignore  main.py  nlft.py  poly.py  pyproject.toml  readme.md  requirements.txt  riemann_hilbert.py  tests.py  tests_polynomial.py  tests_rhw.py  util.py  weiss.py
examples/: bivar_support.ipynb  bivar_weiss.ipynb  bivar_weiss_trivial.ipynb
nlft_qsp/: main.py  nlft.py  nlft_md.py  plot.py  poly.py  poly_md.py  qsp.py  qsp_example.py  rand.py  riemann_hilbert.py  test.ipynb  tests_qsp.py  util.py  weiss.py  xqsp_tests.py
nlft_qsp copy/: nlft.py  pyqsp.py  qsp.py  qsp_test.py  rand.py  test.ipynb  tests_qsp.py  util.py
nlft_qsp copy/numerics/: __init__.py  backend_numpy.py
nlft_qsp/numeric/: __init__.py  backend.py  backend_mpmath.py  backend_numpy.py  mpm_fft.py
nlft_qsp/numerics/: __init__.py  backend.py  backend_mpmath.py  backend_numpy.py
nlft_qsp/solvers/: nlfft.py  weiss.py
tests/: __init__.py  tests_inlft.py  tests_mpm_backend.py  tests_polynomial.py  tests_polynomial_md.py  tests_qsp.py  tests_rhw.py
