[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlft_qsp"
version = "1.0.0"
description = "A package for computing Quantum Signal Processing phase factors using Non-Linear Fourier Analysis."
authors = [
    { name = "Lorenzo Laneve" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fonttools==4.55.6",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.0",
    "mpmath==1.3.0",
    "numpy==2.2.2",
    "packaging==24.2",
    "pillow==11.1.0",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "scipy==1.15.1",
    "six==1.17.0"
]

[tool.setuptools]
packages = ["nlft_qsp"]